Fix header when wrapping onto two lines
Add horizontal padding to footer

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,7 +5,7 @@
   width: 100%;
   will-change: transform;
   transition: transform 0.3s, background-color 0.3s, box-shadow 0.3s;
-  height: 4.5rem;
+  min-height: 4.5rem;
   padding: 1rem min(3rem, 10vw);
   background-color: #6e297e;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4), 0 6px 5px 0 rgba(0, 0, 0, 0.1);
@@ -46,7 +46,6 @@ nav > a + a {
 a.logo-link {
   padding-top: 0;
   padding-bottom: 0;
-  padding-left: 1.5rem;
   flex-grow: 1;
   height: 2.5rem;
 }
